# bitewise

./: .gitignore  Dockerfile  README.md  __init__.py  init.py  main.py  pyproject.toml  test.py
api/endpoints/: recipes.py
database/: database_service.py
models/: ingredient.py  recipe.py  user.py
processing/: normalization.py  normalizer.py  recipe_filter_service.py  utils.py
scraper/: recipe_scraper.py  recipe_url_generator.py
services/: ai_api_service.py  database_service.py  recipe_service.py  scraper_service.py  utils.py
workers/: async_runner.py
